--- a/portainer-setup/kicat-production/docker-compose.yml
+++ b/portainer-setup/kicat-production/docker-compose.yml
@@ -4,18 +4,18 @@ services:
   # Django Application
   app:
     build:
-      context: https://github.com/question106/kicat-django0601.git 
+      context: https://github.com/hohoShin/kicat.git
       dockerfile: Dockerfile
-    container_name: kicat-app
+    container_name: kicat-app-test
     volumes:
       - static-files:/vol/web/static
       - media-files:/vol/web/media
     environment:
       # Domain configuration for nginx-proxy
-      - VIRTUAL_HOST=kicat.co.kr,www.kicat.co.kr,kicat.graceed.co.uk
+      - VIRTUAL_HOST=kicat.co.kr,www.kicat.co.kr
       - VIRTUAL_PORT=8000
-      - LETSENCRYPT_HOST=kicat.co.kr,www.kicat.co.kr,kicat.graceed.co.uk
-      - LETSENCRYPT_EMAIL=question106@gmail.com
+      - LETSENCRYPT_HOST=kicat.co.kr,www.kicat.co.kr
+      - LETSENCRYPT_EMAIL=hohoshindev@gmail.com
       
       # File upload configuration for nginx-proxy
       - CLIENT_MAX_BODY_SIZE=50m
@@ -26,11 +26,11 @@ services:
       # Django production settings
       - DEBUG=0
       - SECRET_KEY=${SECRET_KEY}
-      - ALLOWED_HOSTS=kicat.co.kr www.kicat.co.kr kicat.graceed.co.uk
+      - ALLOWED_HOSTS=kicat.co.kr www.kicat.co.kr
       
       # Database configuration
       - DB_HOST=db
-      - DB_NAME=kicat_production
+      - DB_NAME=kicat_production-test
       - DB_USER=postgres
       - DB_PASSWORD=${DB_PASSWORD}
       
