--- a/portainer-setup/kicat-production/docker-compose.yml
+++ b/portainer-setup/kicat-production/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       # Domain configuration for nginx-proxy
       - VIRTUAL_HOST=kicat.co.kr,www.kicat.co.kr
       - VIRTUAL_PORT=8000
-      - LETSENCRYPT_HOST=kicat.co.kr,www.kicat.co.kr
+      - LETSENCRYPT_HOST=kicat.co.kr,www.kicat.co.kr,test.kicat.co.kr
       - LETSENCRYPT_EMAIL=hohoshindev@gmail.com
       
       # File upload configuration for nginx-proxy
@@ -26,7 +26,7 @@ services:
       # Django production settings
       - DEBUG=0
       - SECRET_KEY=${SECRET_KEY}
-      - ALLOWED_HOSTS=kicat.co.kr www.kicat.co.kr
+      - ALLOWED_HOSTS=kicat.co.kr www.kicat.co.kr test.kicat.co.kr
       
       # Database configuration
       - DB_HOST=db
